[package]
name = "bing-walls"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0.180", features = ["derive"] }
iced = { version = "0.12.1", features = ["image"] }
wallpaper = "3.2.0"
xdg-user = "0.2.1"
bytes = "1.4.0"
